Display Mapbox project drawings by default

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -127,7 +127,7 @@ map:
 #"></p>'
       popupContent: '{{title}}'
       legend: true
-      visible: false
+      visible: true
       title: _(Project management drawings)
 #      id: 5
       rules:
