Update Shareabout layer config with image to prevent MIME issue

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -157,6 +157,7 @@ map:
     - title: _(Show All)
       shareabouts: true
       url: /
+      image: /static/css/images/ticker-point.png
       external: true
       visible: true
 #      legend: true
