--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -139,19 +139,19 @@ map:
 #            weight: "{{stroke-width}}"
       # Polygons
 #        - condition: '"{{marker-symbol}}" == "undefined" || "{{marker-symbol}}" == ""'
-        - condition: '"{{marker-symbol}}" == "undefined" || !"{{marker-symbol}}"'
+        - condition: '"{{properties.marker-symbol}}" == "undefined" || !"{{properties.marker-symbol}}"'
           style:
             shapeType: polygon
-            fillColor: "{{fill}}"
+            fillColor: "{{properties.fill}}"
             fill: 'true'
 #            fill: true
-            color: "{{stroke}}"
+            color: "{{properties.stroke}}"
             opacity: 0.7
-            fillOpacity: '{{fill-opacity}}'
-            weight: "{{stroke-width}}"
+            fillOpacity: '{{properties.fill-opacity}}'
+            weight: "{{properties.stroke-width}}"
       # Points (defaulted for now)
 #        - condition: '"{{marker-symbol}}" != "undefined"'
-        - condition: '"{{marker-symbol}}"'
+        - condition: '"{{properties.marker-symbol}}"'
           style:
             shapeType: point
             color: "#0000FF" # red
@@ -418,18 +418,3 @@ pages:
     slug: contribute
     name: contribute
 
-
-#  - title: _(Filter Places ⌄)
-#    pages:
-#      - title: _(Show All)
-#        url: /
-#        external: true
-#      - title: _(Observation)
-#        url: /filter/observation
-#        external: true
-#      - title: _(Idea)
-#        url: /filter/idea
-#        external: true
-#      - title: _(Question)
-#        url: /filter/question
-#        external: true
