--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -222,7 +222,7 @@ map:
             iconAnchor: [8, 8]
 
     # Shareabouts layers for filtering
-    - title: _(Show All
+    - title: _(Show All)
       shareabouts: true
       url: /
       image: /static/css/images/ticker-point.png
@@ -244,6 +244,12 @@ map:
       shareabouts: true
       image: /static/css/images/markers/marker-question.png
       url: /filter/question
+      external: true
+      visible: true
+    - title: _(Complaint)
+      shareabouts: true
+      image: /static/css/images/markers/marker-complaint.png
+      url: /filter/complaint
       external: true
       visible: true
 
@@ -391,6 +397,35 @@ place_types:
 #          shadowSize: [41, 41]
 #          iconAnchor: [39, 94]
 
+  complaint:
+    label: _(Complaint)
+    rules:
+      - condition: '"{{location_type}}" === "complaint" && {{map.zoom}} < 11 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '"{{location_type}}" === "complaint" && {{map.zoom}} < 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [24, 29]
+          iconAnchor: [12, 29]
+
+      - condition: '"{{location_type}}" === "complaint" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+      - condition: '"{{location_type}}" === "complaint" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
@@ -453,6 +488,8 @@ place:
           value: question
         - label: _(Idea)
           value: idea
+        - label: _(Complaint)
+          value: complaint
       name: location_type
       attrs:
         - key: required
