--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -25,8 +25,8 @@ languages:
   - code: es
     label: Hablo Español
 
-#  - code: hi
-#    label: मैं हिंदी बोलते हैं
+  - code: hi
+    label: मैं हिंदी बोलते हैं
 
 # Settings for map and layer configs
 map:
