--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ node_modules/
 # src/project/local_settings.py
 # src/project/config.yml
 src/flavors/default
+src/flavors/defaultflavor
 
 # sqlite database
 *.db
